src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_tooltip_operator_update.snap
---
source: src/app/render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                      ┌ operator: |= ──────────────────────────── Ctrl+T to dismiss ┐ │"
"│                                                      │Update operator - transform value in place using expression  │ │"
"│                                                      │                                                             │ │"
"│                                                      │  .name |= ascii_upcase   │ uppercase the name field         │ │"
"│                                                      │  .count |= . + 1         │ increment count                  │ │"
"│                                                      │  .items[] |= . * 2       │ double each item                 │ │"
"│                                                      │  .config |= . + {new: 1} │ add to object                    │ │"
"│                                                      │                                                             │ │"
"│                                                      │💡 Right side receives current value as input; use = for     │ │" Hidden by multi-width symbols: [(57, " ")]
"│                                                      │   simple assignment                                         │ │"
"└──────────────────────────────────────────────────────└─────────────────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History                                        "
